--- a/logo.html
+++ b/logo.html
@@ -2,8 +2,9 @@
 <html><head>
     <meta charset="UTF-8">
     <title>WORDSMATTER Logo</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.dom.min.js"></script>
+    <script src="p5.js"></script>
+    <script src="p5.dom.js"></script>
+    <script src="p5.sound.js"></script>
     <style> 
         body { 
             padding: 0; 
@@ -65,7 +66,7 @@ var bkgdColor = 255;
 var bkgdStrokeColor = 235;
 
 function preload() {
-    // Use system monospace font as fallback
+    // Use system font as fallback since we don't have the original font file
 }
 
 function setup(){
