--- a/logo.html
+++ b/logo.html
@@ -27,7 +27,7 @@ var strecherX = 0;
 var strecherYslider, strecherYsize;
 var strecherY = 0;
 
-// CYLINDER - Your exact settings
+// CYLINDER
 var pieSlice;
 var rSlider, radius = 299;
 var stackNumSlider, stackNum = 1;
@@ -42,22 +42,22 @@ var xRotTweakSlider,xRotTweak = 10, yRotTweakSlider, yRotTweak = 13, zRotTweakSl
 var rWaveOffset;
 var stackHeight;
 
-// CAMERA - Your exact settings
+// CAMERA 
 var xRotCamera = -13, yRotCamera = -6, zRotCamera = 1;
 var xRotCameraSlider, yRotCameraSlider, zRotCameraSlider;
-var zoomCamera = 0, zoomCameraSlider;
+var zoomCamera = -50, zoomCameraSlider;
 
-// STRING - Fixed text
+// STRING 
 var letter_select, inp, inpText = "WORDSMATTER WORDSMATTER WORDSMATTER WORDSMATTER";
 var myText = [];
 
-// COLOR - Your exact settings
+// COLOR 
 var invertCheck;
 var strkColor = 0;
 var bkgdColor = 255;
 var bkgdStrokeColor = 235;
 
-// Type settings - Your exact settings
+// Type settings
 typeX = 17;
 typeY = 33;
 typeStroke = 2.7;
