--- a/logo.html
+++ b/logo.html
@@ -29,7 +29,7 @@ var strecherY = 0;
 
 // CYLINDER
 var pieSlice;
-var rSlider, radius = 299;
+var rSlider, radius = 400;
 var stackNumSlider, stackNum = 1;
 var rRotateSlider, rRotate = 4;
 var rOffsetSlider, rOffset = 0.8;
@@ -48,7 +48,7 @@ var xRotCameraSlider, yRotCameraSlider, zRotCameraSlider;
 var zoomCamera = -200, zoomCameraSlider;
 
 // STRING 
-var letter_select, inp, inpText = "WORDSMATTER WORDSMATTER WORDSMATTER WORDSMATTER";
+var letter_select, inp, inpText = "WORDS MATTER WORDS MATTER WORDS MATTER WORDS MATTER WORDS MATTER";
 var myText = [];
 
 // COLOR 
